--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,13 @@
         "activityBar.background": "#501E15",
         "titleBar.activeBackground": "#702A1D",
         "titleBar.activeForeground": "#FDF9F8"
-    }
+    },
+    "files.exclude": {
+        "**/node_modules": true,
+        "**/dist": true
+      },
+      "search.exclude": {
+        "**/node_modules": true,
+        "**/dist": true
+      }
 }
